--- a/alianzas.html
+++ b/alianzas.html
@@ -64,10 +64,10 @@
         <div class="col-sm-12 col-lg-6">
           <!-- Div col -->
           <div class="alianza row align-items-center">
-            <div class="col-sm-4 text-center">
+            <div class="col-sm-3 text-center">
               <a href="img/p2.jpg" data-featherlight="image"><img class="img-fluid rounded-circle" src="img/p2.jpg"></a>
             </div>
-            <div class="col-sm-8">
+            <div class="col-sm-9">
               <div class="row">
                 <div class="col">
                   <div class="alianza-titulo">
@@ -77,17 +77,20 @@
                   Propietario: STELLA <br>
                   Ubicación: San Cipriano
                 </div>
-                <div class="w-100"></div>
-                <div class="col d-flex align-items-center">
-                  <p></p>Servicios:</p>
-                  <i class="au fas fa-utensils fa-2x ml-2"></i>
-                  <i class="au fas fa-concierge-bell fa-2x ml-2"></i>
-                  <i class="au fas fa-glass-martini fa-2x ml-2"></i>
+
+
+
+                <div class="col text-center d-flex align-items-end">
+                  <i class="au fas fa-utensils fa-2x" data-toggle="tooltip" data-placement="bottom" title="Restaurante"></i>
+                  <i class="au fas fa-concierge-bell fa-2x" data-toggle="tooltip" data-placement="bottom" title="Hospedaje"></i>
+                  <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
+                  <!-- <p>Servicios:</p> -->
                 </div>
-                <hr>
-                <div class="w-100"></div>
-                <div class="col mt-3 mb-3 text-center">
-                  <button type="button" class="btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver fotos</button>
+                
+                <div class="w-100"><hr></div>
+                <div class="col mt-2 mb-3 text-center">
+                  <button type="button" class="btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver
+                    fotos</button>
                   <a class="" href="#!">www.facebook.com/elbuengusto</a>
                 </div>
               </div>
@@ -96,7 +99,7 @@
 
         </div> <!-- fin Div col -->
 
-       
+
       </div> <!-- fin Div row -->
 
 
