--- a/alianzas.html
+++ b/alianzas.html
@@ -69,22 +69,23 @@
             </div>
             <div class="col-sm-9">
               <div class="row">
-                <div class="col">
+                <div class="col-12">
                   <div class="alianza-titulo">
                     <h5 class="text-center">Restaurante y Hotel El Buen Gusto</h5>
                     <hr>
                   </div>
+                </div>
+                
+                <div class="col">
                   Propietario: STELLA <br>
                   Ubicación: San Cipriano
                 </div>
 
-
-
-                <div class="col text-center d-flex align-items-end">
+                <div class="col text-center d-flex align-items-center">
+                  <!-- <p>Servicios:</p> -->
                   <i class="au fas fa-utensils fa-2x" data-toggle="tooltip" data-placement="bottom" title="Restaurante"></i>
                   <i class="au fas fa-concierge-bell fa-2x" data-toggle="tooltip" data-placement="bottom" title="Hospedaje"></i>
                   <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
-                  <!-- <p>Servicios:</p> -->
                 </div>
                 
                 <div class="w-100"><hr></div>
