--- a/alianzas.html
+++ b/alianzas.html
@@ -65,7 +65,8 @@
           <!-- Div col -->
           <div class="alianza row align-items-center">
             <div class="col-sm-3 text-center">
-              <a href="img/p2.jpg" data-featherlight="image"><img class="img-fluid rounded-circle" src="img/p2.jpg"></a>
+              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
+                  class="img-fluid rounded-circle" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
             </div>
             <div class="col-sm-9">
               <div class="row">
@@ -75,7 +76,7 @@
                     <hr>
                   </div>
                 </div>
-                
+
                 <div class="col">
                   Propietario: STELLA <br>
                   Ubicación: San Cipriano
@@ -87,9 +88,11 @@
                   <i class="au fas fa-concierge-bell fa-2x" data-toggle="tooltip" data-placement="bottom" title="Hospedaje"></i>
                   <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
                 </div>
-                
-                <div class="w-100"><hr></div>
-                <div class="col mt-2 mb-3 text-center">
+
+                <div class="w-100">
+                  <hr>
+                </div>
+                <div class="col mt-1 mb-3 text-center">
                   <button type="button" class="btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver
                     fotos</button>
                   <a class="" href="#!">www.facebook.com/elbuengusto</a>
@@ -124,8 +127,11 @@
               <div class="col text-center">
 
                 <section data-featherlight-gallery data-featherlight-filter="a">
-                  <a href="img/p3.jpg"><img class="img-fluid" src="img/p3.jpg"></a>
-                  <a href="img/logo.jpg"><img class="img-fluid" src="img/logo.jpg"></a>
+                  <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113552.jpg"><img class="img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113552.jpg"></a>
+                  <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113655.jpg"><img class="img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113655.jpg"></a>
+                  <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113720.jpg"><img class="img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113720.jpg"></a>
+                  <a href="img/restaurante y hotel el buen gusto/IMG_20180916_114339.jpg"><img class="img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_114339.jpg"></a>
+
                 </section>
 
               </div>
