--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <section class="container" id="nosotros">
     <div class="row pb-3 pt-3 text-center bg-light">
       <div class="col-12">
-        <h3>Nosotros</h3>
+        <h3>NOSOTROS</h3>
       </div>
     </div>
     <div class="row mt-4 align-items-center">
@@ -165,7 +165,7 @@
   <section class="container" id="ubicacion">
     <div class="row pb-3 pt-3 text-center bg-light">
       <div class="col">
-        <h3>Ubicación</h3>
+        <h3>UBICACIÓN</h3>
       </div>
     </div>
     <div class="row mt-4">
