--- a/index2.html
+++ b/index2.html
@@ -38,80 +38,75 @@
             <ul class="list-unstyled components">
                 <p>COOMUTRANSTUR</p>
                 <li class="active">
-                    <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">Home</a>
+                    <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">Nosotros</a>
                     <ul class="collapse list-unstyled" id="homeSubmenu">
                         <li>
-                            <a href="#">Home 1</a>
+                            <a href="#Page-1">Vision</a>
                         </li>
                         <li>
-                            <a href="#">Home 2</a>
-                        </li>
-                        <li>
-                            <a href="#">Home 3</a>
+                            <a href="#Page-2">Mision</a>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <a href="#">About</a>
-                    <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false">Pages</a>
-                    <ul class="collapse list-unstyled" id="pageSubmenu">
-                        <li>
-                            <a href="#">Page 1</a>
-                        </li>
-                        <li>
-                            <a href="#">Page 2</a>
-                        </li>
-                        <li>
-                            <a href="#">Page 3</a>
-                        </li>
-                    </ul>
+                    <a href="#">POLÍTICA DE CALIDAD</a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="#">Contacto</a>
                 </li>
             </ul>
 
             <ul class="list-unstyled CTAs">
                 <li>
-                    <a href="#" class="download">Portfolio</a>
-                </li>
-                <li>
-                    <a href="#" class="article">Back to article</a>
+                    <a href="#" class="download">Portafolio</a>
                 </li>
             </ul>
         </nav>
 
         <!-- Page Content  -->
-        <div id="content">
+        <div id="content" class="p-0">
+            <button type="button" id="sidebarCollapse" class="btn">
+                <i class="fas fa-bars"></i>
+                <span>Indice</span>
+            </button>
 
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
+            <div id="container">
+                <div id="i1" class="c1" data-anchor="Page 1">
 
-                    <button type="button" id="sidebarCollapse" class="btn">
-                        <i class="fas fa-align-left"></i>
-                        <span>Toggle Sidebar</span>
-                    </button>
+                    <h1 class="display-1 text-center">Vision</h1>
+
                 </div>
-            </nav>
+                <div class="c2" data-anchor="Page 2">
 
+                    <h1 class="display-1 text-center">Mision</h1>
+
+                </div>
+                <div class="c3" data-anchor="Page 3">
+
+                    <h1 class="display-1 text-center">Politica de calidad</h1>
+
+                </div>
+            </div>
         </div>
     </div>
 
-    <div class="overlay"></div>
+    <div class="overlay"></div> <!-- No tocar, es la oscuridad -->
+
 
     <!-- jQuery CDN - Slim version (=without AJAX) -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+    <script src="js/jquery.min.js"></script>
     <!-- Popper.JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
         crossorigin="anonymous"></script>
     <!-- Bootstrap JS -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
-        crossorigin="anonymous"></script>
+    <script src="js/bootstrap.min.js"></script>
     <!-- jQuery Custom Scroller CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
 
+    <script src="js/pageable.js"></script>
+
     <script type="text/javascript">
+        new Pageable("#container");
         $(document).ready(function () {
             $("#sidebar").mCustomScrollbar({
                 theme: "minimal"
