--- a/pru.html
+++ b/pru.html
@@ -7,7 +7,7 @@
     <title>Scroll</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
 
     <style>
         body {
@@ -38,7 +38,8 @@
         .anchors li {
             list-style: none;
         }
-        .anchors a{
+
+        .anchors a {
             text-decoration: none;
         }
 
@@ -52,9 +53,9 @@
 
             padding: 10px 30px;
 
--webkit-box-shadow: -10px 0px 50px 5px rgba(0,0,0,0.12);
--moz-box-shadow: -10px 0px 50px 5px rgba(0,0,0,0.12);
-box-shadow: -10px 0px 50px 5px rgba(0,0,0,0.12);
+            -webkit-box-shadow: -10px 0px 50px 5px rgba(0, 0, 0, 0.12);
+            -moz-box-shadow: -10px 0px 50px 5px rgba(0, 0, 0, 0.12);
+            box-shadow: -10px 0px 50px 5px rgba(0, 0, 0, 0.12);
 
         }
     </style>
@@ -64,7 +65,7 @@ box-shadow: -10px 0px 50px 5px rgba(0,0,0,0.12);
 
     <div class="anchors">
         <ul>
-            <li><a href="#Page-1">Este es un texto largo</a></li>
+            <li><a href="#Page-1">Pagina 1</a></li>
             <li><a href="#Page-2">Pagina 2</a></li>
             <li><a href="#Page-3">Pagina 3</a></li>
 
@@ -72,10 +73,17 @@ box-shadow: -10px 0px 50px 5px rgba(0,0,0,0.12);
     </div>
 
     <div id="container">
-        <div id="i1" class="c1" data-anchor="Page 1">Pagina uno</div>
-        <div class="c2" data-anchor="Page 2">2</div>
+        <div id="i1" class="c1" data-anchor="Page 1">
+
+
+        </div>
+        <div class="c2" data-anchor="Page 2">
+            2
+
+        </div>
         <div class="c3" data-anchor="Page 3">
             <a href="#i1">volver</a>
+
         </div>
     </div>
 
