--- a/index2.html
+++ b/index2.html
@@ -71,19 +71,34 @@
             </button>
 
             <div id="container">
-                <div id="i1" class="c1" data-anchor="Page 1">
+                <div class="c1" data-anchor="Page 1">
 
-                    <h1 class="display-1 text-center">Vision</h1>
+                    <h1 class="display-1 text-center">Nosotros</h1>
 
                 </div>
                 <div class="c2" data-anchor="Page 2">
 
-                    <h1 class="display-1 text-center">Mision</h1>
+                    <h1 class="display-1 text-center">Vision</h1>
 
                 </div>
                 <div class="c3" data-anchor="Page 3">
 
+                    <h1 class="display-1 text-center">Mision</h1>
+
+                </div>
+                <div class="c4" data-anchor="Page 4">
+
                     <h1 class="display-1 text-center">Politica de calidad</h1>
+
+                </div>
+                <div class="c3" data-anchor="Page 5">
+
+                    <h1 class="display-1 text-center">Ubicacion</h1>
+
+                </div>
+                <div class="c3" data-anchor="Page 6">
+
+                    <h1 class="display-1 text-center">Contacto</h1>
 
                 </div>
             </div>
@@ -96,13 +111,10 @@
     <!-- jQuery CDN - Slim version (=without AJAX) -->
     <script src="js/jquery.min.js"></script>
     <!-- Popper.JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
-        crossorigin="anonymous"></script>
-    <!-- Bootstrap JS -->
+    <script src="js/popper.min.js"></script> <!-- Bootstrap JS -->
     <script src="js/bootstrap.min.js"></script>
     <!-- jQuery Custom Scroller CDN -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
-
+    <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
     <script src="js/pageable.js"></script>
 
     <script type="text/javascript">
