--- a/index2.html
+++ b/index2.html
@@ -12,8 +12,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/est.css">
     <!-- Scrollbar Custom CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
-
+    <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
     <!-- Font Awesome JS -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ"
         crossorigin="anonymous"></script>
@@ -36,23 +35,26 @@
             </div>
 
             <ul class="list-unstyled components">
-                <p>COOMUTRANSTUR</p>
+                <p><a href="#Page-1">COOMUTRANSTUR</a></p>
                 <li class="active">
                     <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">Nosotros</a>
                     <ul class="collapse list-unstyled" id="homeSubmenu">
                         <li>
-                            <a href="#Page-1">Vision</a>
+                            <a href="#Page-2">Vision</a>
                         </li>
                         <li>
-                            <a href="#Page-2">Mision</a>
+                            <a href="#Page-3">Mision</a>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <a href="#">POLÍTICA DE CALIDAD</a>
+                    <a href="#Page-4">POLÍTICA DE CALIDAD</a>
                 </li>
                 <li>
-                    <a href="#">Contacto</a>
+                    <a href="#Page-5">Ubicacion</a>
+                </li>
+                <li>
+                    <a href="#Page-6">Contacto</a>
                 </li>
             </ul>
 
@@ -73,32 +75,32 @@
             <div id="container">
                 <div class="c1" data-anchor="Page 1">
 
-                    <h1 class="display-1 text-center">Nosotros</h1>
+                    <h1 class="display-4 text-center">Nosotros</h1>
 
                 </div>
                 <div class="c2" data-anchor="Page 2">
 
-                    <h1 class="display-1 text-center">Vision</h1>
+                    <h1 class="display-4 text-center">Vision</h1>
 
                 </div>
                 <div class="c3" data-anchor="Page 3">
 
-                    <h1 class="display-1 text-center">Mision</h1>
+                    <h1 class="display-4 text-center">Mision</h1>
 
                 </div>
                 <div class="c4" data-anchor="Page 4">
 
-                    <h1 class="display-1 text-center">Politica de calidad</h1>
+                    <h1 class="display-4 text-center">Politica de calidad</h1>
 
                 </div>
                 <div class="c3" data-anchor="Page 5">
 
-                    <h1 class="display-1 text-center">Ubicacion</h1>
+                    <h1 class="display-4 text-center">Ubicacion</h1>
 
                 </div>
                 <div class="c3" data-anchor="Page 6">
 
-                    <h1 class="display-1 text-center">Contacto</h1>
+                    <h1 class="display-4 text-center">Contacto</h1>
 
                 </div>
             </div>
