--- a/index2.html
+++ b/index2.html
@@ -72,7 +72,7 @@
                 <span>Indice</span>
             </button>
 
-            <div id="container">
+            <div id="container" class="mt-5">
                 <div class="c1" data-anchor="Page 1">
 
                     <h1 class="display-4 text-center">Nosotros</h1>
@@ -93,12 +93,12 @@
                     <h1 class="display-4 text-center">Politica de calidad</h1>
 
                 </div>
-                <div class="c3" data-anchor="Page 5">
+                <div class="c5" data-anchor="Page 5">
 
                     <h1 class="display-4 text-center">Ubicacion</h1>
 
                 </div>
-                <div class="c3" data-anchor="Page 6">
+                <div class="c6" data-anchor="Page 6">
 
                     <h1 class="display-4 text-center">Contacto</h1>
 
