--- a/index2.html
+++ b/index2.html
@@ -75,12 +75,10 @@
             <div id="container" class="mt-5">
                 <div class="p1 row" data-anchor="Page 1" heigth="700px">
 
-                    <div class="col">
+                    <div class="col-12">
                         <h1 class="display-4 text-center">Nosotros</h1>
                     </div>
-                    <div class="w-100"></div>
-                    <div class="col">
-                        
+                    <div class="col-12">
                         <p class="text-justify " style="font-size:14px">
                             Somos una organización sin ánimo de lucro, de interés social, perteneciente al sector de la
                             economía solidaria, ubicado en el Consejo Comunitario de Comunidades Negras del corregimiento
@@ -90,7 +88,6 @@
                             económicamente a la cooperativa y son aportantes directos de su trabajo. Establecido el decreto
                             4588 de 2006.
                         </p>
-
                     </div>
 
                 </div>
