--- a/index2.html
+++ b/index2.html
@@ -72,9 +72,8 @@
                 <span>Indice</span>
             </button>
 
-            <div id="container" class="mt-5">
+            <div id="container" class="">
                 <div class="p1 row" data-anchor="Page 1" heigth="700px">
-
                     <div class="col-12">
                         <h1 class="display-4 text-center">Nosotros</h1>
                     </div>
