--- a/index2.html
+++ b/index2.html
@@ -73,7 +73,7 @@
             </button>
 
             <div id="container" class="">
-                <div class="p1 row" data-anchor="Page 1" heigth="700px">
+                <div class="p1 row" data-anchor="Page 1">
                     <div class="col-12">
                         <h1 class="display-4 text-center">Nosotros</h1>
                     </div>
