--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
       </div>
     </div>
     <div class="row mt-4 align-items-center">
-      <div class="col-sm-12 col-md-5 col-xl-4 text-center">
+      <div class="col-sm-12 col-md-3 col-xl-4 text-center">
         <img class="img-fluid" src="img/logo.jpg" alt="logo Coomutranstur">
       </div>
-      <div class="col-sm-12 col-md-7 col-xl-8">
+      <div class="col-sm-12 col-md-9 col-xl-8" data-aos="fade-left">
         <p class="text-justify">Somos una organización sin ánimo de lucro, de interés social, perteneciente al sector
           de la economía
           solidaria, ubicado en el Consejo Comunitario de Comunidades Negras del corregimiento de Córdoba y San
@@ -140,7 +140,8 @@
     </div>
     <div class="row justify-content-around mt-4">
       <div class="col d-flex align-items-center">
-        <p class="text-justify">Estamos mejorando continuamente nuestros servicios para satisfacer las necesidades y expectativas
+        <p class="text-justify">Estamos mejorando continuamente nuestros servicios para satisfacer las necesidades y
+          expectativas
           de
           nuestros asociados, sus familias y demás grupos de interés, generando creación de valor sostenible.
         </p>
@@ -242,10 +243,12 @@
   <script src="js/holder.js"></script>
   <script src="js/wow.js"></script>
   <script src="js/scrollreveal.min.js"></script>
+  <script src="js/aos.js"></script>
+
   <script src="js/app.js"></script>
 
   <script>
-
+    AOS.init();
 
 
     jQuery(document).ready(function ($) {
