--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
   <!-- Pruebas -->
 
+  <link rel="stylesheet" href="css/aos.css">
 
   <!-- Pruebas -->
 
@@ -87,15 +88,15 @@
   <!-- Acerca de  -->
   <section class="container" id="nosotros">
     <div class="row pb-3 pt-3 text-center bg-light">
-      <div class="col-12">
+      <div class="col-12" data-aos="zoom-in">
         <h3>NOSOTROS</h3>
       </div>
     </div>
     <div class="row mt-4 align-items-center">
-      <div class="col-sm-12 col-md-3 col-xl-4 text-center">
+      <div class="col-sm-12 col-md-3 col-xl-4 text-center" data-aos="zoom-in-right">
         <img class="img-fluid" src="img/logo.jpg" alt="logo Coomutranstur">
       </div>
-      <div class="col-sm-12 col-md-9 col-xl-8" data-aos="fade-left">
+      <div class="col-sm-12 col-md-9 col-xl-8" data-aos="fade-left" data-aos-delay="500">
         <p class="text-justify">Somos una organización sin ánimo de lucro, de interés social, perteneciente al sector
           de la economía
           solidaria, ubicado en el Consejo Comunitario de Comunidades Negras del corregimiento de Córdoba y San
@@ -109,7 +110,7 @@
     <hr>
 
     <div class="row mt-4">
-      <div class="col">
+      <div class="col" data-aos="fade-right">
         <h3 class="display-4 text-center">Visión</h3>
         <p class="text-justify">
           La Cooperativa <em></em>"<strong>COOMUTRANSTUR</strong>"</em> se consolidará como una empresa del sector de
@@ -119,7 +120,7 @@
           construcción del capital social en Colombia.
         </p>
       </div>
-      <div class="col">
+      <div class="col" data-aos="fade-left">
         <h3 class="display-4 text-center">Misión</h3>
         <p class="text-justify">
           Contribuir al crecimiento económico, social, educativo y cultural de los asociados y sus familias
@@ -134,12 +135,12 @@
 
   <section class="container" id="politica">
     <div class="row pb-3 pt-3 align-items-center bg-light">
-      <div class="col-12 text-center">
+      <div class="col-12 text-center" data-aos="zoom-in">
         <h3>POLÍTICA DE CALIDAD</h3>
       </div>
     </div>
     <div class="row justify-content-around mt-4">
-      <div class="col d-flex align-items-center">
+      <div class="col d-flex align-items-center" data-aos="flip-left" data-aos-duration="1200">
         <p class="text-justify">Estamos mejorando continuamente nuestros servicios para satisfacer las necesidades y
           expectativas
           de
@@ -147,7 +148,7 @@
         </p>
       </div>
       <hr>
-      <div class="col text-center d-flex align-items-center justify-content-center mt-3">
+      <div class="col text-center d-flex align-items-center justify-content-center mt-3" data-aos="flip-right" data-aos-duration="1200">
         <strong> Valores corporativos:</strong>
         <ul class="list-unstyled">
           <li>Ayuda mutua</li>
@@ -165,15 +166,15 @@
   <!-- Ubicacion  -->
   <section class="container" id="ubicacion">
     <div class="row pb-3 pt-3 text-center bg-light">
-      <div class="col">
+      <div class="col" data-aos="zoom-in">
         <h3>UBICACIÓN</h3>
       </div>
     </div>
     <div class="row mt-4">
-      <div class="col-md-12 col-lg-6">
+      <div class="col-md-12 col-lg-6" data-aos="zoom-out">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d991.9239370580017!2d-76.92849067074255!3d3.8759615961146303!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e373bfac0c11d7d%3A0xa41564121f3506cb!2sCooperativa+Multiactiva+de+Transportadores+Turisticos+de+Cordoba+y+San+Cipriano+-+COOMUTRANSTUR!5e0!3m2!1ses-419!2sco!4v1539953258674"
           width="100%" height="460" frameborder="0" style="border:0" allowfullscreen></iframe> </div>
-      <div class="col-md-12 col-lg-6">
+      <div class="col-md-12 col-lg-6" data-aos="zoom-in">
 
         <div class="fb-comments" data-href="https://fserver.github.io/" data-width="100%" data-numposts="3"></div>
 
