--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
       </div>
     </div>
     <div class="row mt-4">
-      <div class="col-md-12 col-lg-6" data-aos="zoom-out">
+      <div class="col-md-12 col-lg-6" data-aos="zoom-in">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d991.9239370580017!2d-76.92849067074255!3d3.8759615961146303!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e373bfac0c11d7d%3A0xa41564121f3506cb!2sCooperativa+Multiactiva+de+Transportadores+Turisticos+de+Cordoba+y+San+Cipriano+-+COOMUTRANSTUR!5e0!3m2!1ses-419!2sco!4v1539953258674"
           width="100%" height="460" frameborder="0" style="border:0" allowfullscreen></iframe> </div>
       <div class="col-md-12 col-lg-6" data-aos="zoom-in">
