--- a/pru.html
+++ b/pru.html
@@ -75,7 +75,7 @@
     <div id="container">
         <div id="i1" class="c1" data-anchor="Page 1">
 
-
+<h1 class="display-1">titulo 1</h1>
         </div>
         <div class="c2" data-anchor="Page 2">
             2
